Make README.md concise